v1.4.4 (WIP)
- Fix resize event dimensions on Windows

v1.4.3 (2020-02-13)
- Add SetFocusedFunc to TreeNode
- Add option to always show scroll bar
- Fix scrolling Table with PageDown and PageUp
- Do not wrap around list by default

v1.4.2 (2020-02-02)
- Add scroll bar to List, DropDown, Table and TreeView
- Add SetDoneFunc to TreeView
- Fix mouse support when resuming after Application.Suspend
- Fix rendering issues with TextViews which have their background color set to
ColorDefault

v1.4.1 (2020-01-23)
- Add ProgressBar widget
- Add Application.RingBell
- Add example multi-layout application and mouse-enabled application
- Add documentation for GetChildren methods

v1.4.0 (2020-01-16)
- Bump version to resolve issues with "go get"

v0.2.2 (2020-01-06)
- Add optional message displayed after Checkbox
- Fix Dropdown mouse capture behavior
- Fix TextView region highlighting on last line

v0.2.1 (2020-01-01)
- Add initial mouse support (some widgets are unsupported)
- Add window size change handler
- Fix resetting TextView color with [-]
- Fix adding unnecessary padding to some runes
- Fix handling ANSI color escape codes 39 (default foreground) and 49 (default
background)

v0.2.0 (2019-12-30)
- Fork tview as cview

v0.1.20 (2019-07-08)
- Added autocomplete functionality to InputField.

v0.1.19 (2018-10-28)
- Added QueueUpdate() and QueueEvent() to Application to help with
modifications to primitives from goroutines.

v0.1.18 (2018-10-18)
- InputField elements can now be navigated freely.

v0.1.17 (2018-06-20)
- Added TreeView.

v0.1.15 (2018-05-02)
- Flex and Grid don't clear their background per default, thus allowing for
custom modals. See the Wiki for an example.

v0.1.14 (2018-04-13)
- Added an Escape() function which keep strings like color or region tags from
being recognized as such.
- Added ANSIWriter() and TranslateANSI() which convert ANSI escape sequences to
tview color tags.

v0.1.13 (2018-04-01)