@@ -1,5 +1,6 @@
 v1.4.4 (WIP)
 - Fix resize event dimensions on Windows
+- Clarify that Box does not have inner text
 
 v1.4.3 (2020-02-13)
 - Add SetFocusedFunc to TreeNode
